some more location dropdown fixes, added functionality for applying a scrollbar to location dropdowns
git-svn-id: http://svn.localprojects.net/gam2/trunk@898 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -834,11 +834,12 @@ table.resources-list .tooltip.right { left:-332px; }
 /* location hood list */
 div.location-hood-list { 
 	position:absolute; padding: 8px 0; margin-top:2px; background-color:#fff; z-index: 10001;
-	border:1px solid #B9B8B6; font-size: 18px; line-height: 28px; max-height: 980px; /*overflow: hidden;*/
+	border:1px solid #B9B8B6; font-size: 18px; line-height: 28px; /*max-height: 980px;*/
 	
 	-webkit-transition: 100ms ease-in;  -moz-transition: 100ms ease-in; -o-transition: 100ms ease-in; transition: 100ms ease-in;
 	-moz-border-radius: 2px; -webkit-border-radius: 2px; -khtml-border-radius: 2px; border-radius: 2px;
-	}
+}
+div.location-hood-list.has-scrollbar { height:275px; overflow-y:scroll; }
 div.location-hood-list:hover { -webkit-box-shadow: 1px 1px 4px #cfcecc; -moz-box-shadow: 1px 1px 4px #cfcecc; box-shadow: 1px 1px 4px #cfcecc; }
 div.location-hood-list li { display: block; z-index: 10002; }
 div.location-hood-list a { padding: 0 8px; display: block; }
